--- a/source/popup/popup.css
+++ b/source/popup/popup.css
@@ -10,3 +10,18 @@
 h4{
     color: #006699;
 }
+
+.badge{
+    margin-left: 10px;
+    margin-bottom: 5px;
+    position: absolute;
+    background: #008000;
+    text-align: center;
+    border-radius: 5px;
+    color:white;
+    width: 15px;
+    height: 15px;
+    font-weight: bold;
+    font-size: 10px;
+    vertical-align: middle;
+  }
