--- a/source/popup/popup.css
+++ b/source/popup/popup.css
@@ -15,7 +15,7 @@ h4{
     margin-left: 10px;
     margin-bottom: 5px;
     position: absolute;
-    background: #008000;
+    background: #e60073;
     text-align: center;
     border-radius: 5px;
     color:white;
@@ -24,4 +24,14 @@ h4{
     font-weight: bold;
     font-size: 10px;
     vertical-align: middle;
+  }
+
+  .logo{
+      height: 24px;
+      width: 24px;
+  }
+
+  .inline-block{
+      display: inline-block;
+      vertical-align: middle;
   }
