--- a/source/popup/popup.css
+++ b/source/popup/popup.css
@@ -1,10 +1,10 @@
 .container{
     margin: 10px;
-    min-width: 300px;
+    min-width: 400px;
 }
 
 .item{
-    padding-bottom: 15px;
+    padding-bottom: 25px;
 }
 
 h4{
@@ -14,8 +14,8 @@ h4{
 .badge{
     margin-left: 10px;
     margin-bottom: 5px;
-    position: absolute;
-    background: #e60073;
+    /*position: absolute;*/
+    background: #008000;
     text-align: center;
     border-radius: 5px;
     color:white;
@@ -24,6 +24,7 @@ h4{
     font-weight: bold;
     font-size: 10px;
     vertical-align: middle;
+    padding: 2px 6px;
   }
 
   .logo{
@@ -35,3 +36,42 @@ h4{
       display: inline-block;
       vertical-align: middle;
   }
+
+
+  .offline-icon{
+    display: inline-block;
+    height: 15px;
+    width: 19px;
+    margin-bottom: -4px;
+    margin-left: 8px;
+  }
+
+
+
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #e69900;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+
+ 
