Re-engineered popup.js rendering

--- a/source/popup/popup.css
+++ b/source/popup/popup.css
@@ -15,7 +15,7 @@ h4{
     margin-left: 10px;
     margin-bottom: 5px;
     /*position: absolute;*/
-    background: #008000;
+    background: #cc0000;
     text-align: center;
     border-radius: 5px;
     color:white;
